--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "dependencies": {
     "@types/node": "^16.11.18",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@zyllio/zy-sdk": "0.0.6",
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^16.0.0",
+    "@zyllio/zy-sdk": "latest",
     "chart.js": "^3.7.0",
-    "react": "^17.0.2",
+    "react": "^16.0.2",
     "react-chartjs-2": "^4.0.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^16.0.0",
     "react-scripts": "5.0.0",
-    "reactive-elements": "^1.0.0-alpha.1",
+    "react-to-webcomponent": "^1.5.1",
+    "reactive-elements": "0.10.0",
     "typescript": "^4.5.4"
   },
   "scripts": {
