--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run rename",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "rename": "renamer -f /main.*js/ -r plugin.js ./build/static/js/*",
     "deploy": "lt --port 3000",
     "deploy2": "copyfiles -f ./build/static/js/main.*.js ../zyllio-studio/client-app/src/assets"
   },
@@ -26,6 +27,7 @@
     "copyfiles": "^2.4.1",
     "localtunnel": "^2.0.2",
     "react-scripts": "5.0.0",
+    "renamer": "^4.0.0",
     "typescript": "^4.5.4"
   },
   "browserslist": {
