--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && npm run rename",
+    "build": "react-scripts build && npm run rename && copyfiles -f src/plugin.json build/static/js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "rename": "renamer -f /main.*js/ -r plugin.js ./build/static/js/*",
