--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && npm run rename && copyfiles -f src/plugin.json build/static/js",
+    "build": "react-scripts build && npm run rename && copyfiles -f src/plugin.json dist && copyfiles build/static/js/plugin.js -f dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "rename": "renamer -f /main.*js/ -r plugin.js ./build/static/js/*",
-    "deploy": "lt --port 3000",
-    "deploy2": "copyfiles -f ./build/static/js/main.*.js ../zyllio-studio/client-app/src/assets"
+    "rename": "renamer -f /main.*js/ -r plugin.js ./build/static/js/*"
   },
   "dependencies": {
     "chart.js": "^3.7.0",
@@ -24,8 +22,8 @@
     "@types/react": "^16.0.0",
     "@types/react-dom": "^16.0.0",
     "@zyllio/zy-sdk": "latest",
+    "@zyllio/zy-cli": "latest",
     "copyfiles": "^2.4.1",
-    "localtunnel": "^2.0.2",
     "react-scripts": "5.0.0",
     "renamer": "^4.0.0",
     "typescript": "^4.5.4"
